separated workflows and testing folders
created testing folder where we test the ingestion pipelines. The workflow folder is now the folder where we will create the modularized part of our codes where we will orchestrate it via Databricks Workflows

--- a/databricks/data-analytics/Untitled Notebook 2024-08-13 21_17_11.ipynb
+++ b/databricks/data-analytics/Untitled Notebook 2024-08-13 21_17_11.ipynb
@@ -57,6 +57,47 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "e145e8aa-7ea5-42b3-bbe7-40beb9a25d3f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "# UDFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5320dc70-367a-4da9-b35d-c8d543e2a7a8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def cal_lat_log_dist(df, lat1, long1, lat2, long2):\n",
+    "        df = df.withColumn('distance_in_kms' , \\\n",
+    "            round((acos((sin(radians(col(lat1))) * sin(radians(col(lat2)))) + \\\n",
+    "                   ((cos(radians(col(lat1))) * cos(radians(col(lat2)))) * \\\n",
+    "                    (cos(radians(long1) - radians(long2))))\n",
+    "                       ) * lit(6371.0)), 4))\n",
+    "        return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "a8e75d4a-5434-4f62-a502-793b4cbf54a8",
      "showTitle": false,
      "title": ""
@@ -83,7 +124,55 @@
    },
    "outputs": [],
    "source": [
-    "GDELT_EVENTS = spark.sql(\"SELECT * FROM BRONZE.GDELT_EVENTS\")"
+    "GDELT_EVENTS = spark.sql(\"SELECT * FROM BRONZE.GDELT_EVENTS\")\n",
+    "PORT_LOCATIONS_DIM = spark.sql(\"SELECT * FROM BRONZE.PORTS_DICTIONARY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c516bf38-65b6-43c3-9a77-cf754781b890",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "## Cleaning PORT_LOCATIONS_DIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f10c16be-af27-4424-9fa6-5e2d4f0f2eeb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(\n",
+    "PORT_LOCATIONS_DIM\n",
+    ".filter(\"LATITUDE IS NOT NULL\")\n",
+    ".filter(\"LONGITUDE IS NOT NULL\")\n",
+    ".withColumn(\"LATITUDE\", regexp_replace(col(\"LATITUDE\"),\" \",\"\"))\n",
+    ".withColumn(\"LONGITUDE\", regexp_replace(col(\"LONGITUDE\"),\" \",\"\"))\n",
+    ".withColumn(\"Lat_Ori\", substring(col(\"LATITUDE\"),-1,1))\n",
+    ".withColumn(\"Long_Ori\", substring(col(\"LONGITUDE\"),-1,1))\n",
+    ".withColumn(\"LATITUDE_CORRECTED\", \n",
+    "            when(col(\"Lat_Ori\") == 'S', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\") * - 1)\n",
+    "            .when(col(\"Lat_Ori\") == 'N', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\"))\n",
+    ")\n",
+    ")"
    ]
   },
   {
@@ -169,15 +258,74 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "412a30bb-6d45-4408-b06b-1eac1a7b1da5",
+     "nuid": "e7f360da-4cc5-4f4b-b309-2bcb96a9725e",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "# GDELT_EVENTS_DATE.count()\n",
-    "# 47,262,473"
+    "display(GDELT_EVENTS_DATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a208270-712a-4bfb-9632-0239a1200ea1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "GDELT_EVENTS_BASE = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b879c28e-8528-4822-85b6-45f3b81b7178",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "GDELT_EVENTS_DATE.select(\"GlobalEventID\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a4b4a9f5-0ca6-40d9-80e4-7c7768d60761",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(GDELT_EVENTS_DATE)"
    ]
   },
   {
@@ -199,11 +347,10 @@
    "source": [
     "GDELT_EVENTS_PORTS = (GDELT_EVENTS_DATE\n",
     "#.filter(col(\"ActionGeo_Fullname\").like(\"% Port %\"))\n",
+    "#.filter(col(\"SOURCEURL\").like(\"%-port-%\"))\n",
+    "#)\n",
     "\n",
-    ".filter(col(\"SOURCEURL\").like(\"%-port-%\"))\n",
-    ")\n",
-    "\n",
-    "print(\"Number of observations with the name a location with name port in it: \",GDELT_EVENTS_PORTS.count())"
+    "#print(\"Number of observations with the name a location with name port in it: \",GDELT_EVENTS_PORTS.count())"
    ]
   },
   {
