creación de workflow para events
Creación de workflow para tabla de eventos en ambiente de producción orquestrado

--- a/databricks/data-analytics/Untitled Notebook 2024-08-13 21_17_11.ipynb
+++ b/databricks/data-analytics/Untitled Notebook 2024-08-13 21_17_11.ipynb
@@ -125,7 +125,8 @@
    "outputs": [],
    "source": [
     "GDELT_EVENTS = spark.sql(\"SELECT * FROM BRONZE.GDELT_EVENTS\")\n",
-    "PORT_LOCATIONS_DIM = spark.sql(\"SELECT * FROM BRONZE.PORTS_DICTIONARY\")"
+    "PORT_LOCATIONS_DIM = spark.sql(\"SELECT * FROM BRONZE.PORTS_DICTIONARY\")\n",
+    "CAMEO_DICTIONARY = spark.sql(\"SELECT * FROM BRONZE.CAMEO_DICTIONARY\")"
    ]
   },
   {
@@ -160,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "display(\n",
+    "PORT_LOCATIONS_DIM_CLEANED = (\n",
     "PORT_LOCATIONS_DIM\n",
     ".filter(\"LATITUDE IS NOT NULL\")\n",
     ".filter(\"LONGITUDE IS NOT NULL\")\n",
@@ -171,8 +172,32 @@
     ".withColumn(\"LATITUDE_CORRECTED\", \n",
     "            when(col(\"Lat_Ori\") == 'S', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\") * - 1)\n",
     "            .when(col(\"Lat_Ori\") == 'N', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\"))\n",
+    "            .when(col(\"Lat_Ori\") == 'E', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\") * -1)\n",
+    "            .otherwise(999.999) # ID FOR CHECKING\n",
     ")\n",
+    ".withColumn(\"LONGITUDE_CORRECTED\", \n",
+    "            when(col(\"Long_Ori\") == 'E', expr(\"substring(LONGITUDE,1,length(LONGITUDE) - 1 )\"))\n",
+    "            .when(col(\"Long_Ori\") == 'W', expr(\"substring(LONGITUDE,1,length(LONGITUDE) - 1 )\") * -1)\n",
+    "            .when(col(\"Lat_Ori\") == 'N', expr(\"substring(LATITUDE,1,length(LATITUDE) - 1 )\") * -1)\n",
+    "            .otherwise(999.999) # ID FOR CHECKING\n",
+    ")\n",
+    "#.select(\"COUNTRY\",\"PORT\",\"LATITUDE_CORRECTED\",\"LONGITUDE_CORRECTED\")\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a4d284f2-a6c0-47b1-81f1-72c17aca0bd6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "# "
    ]
   },
   {
@@ -187,8 +212,383 @@
     }
    },
    "source": [
-    "## EDA"
+    "## DATA ANALYSIS FOR WHOLE COUNTRYS IN THE TRANSPACIFIC ROUTE:\n",
+    "* CANADA\n",
+    "* USA\n",
+    "* CHINA\n",
+    "* JAPON\n",
+    "* SOUTH KOREA\n",
+    "* TAIWAN\n",
+    "* VEITNAM\n",
+    "* HONG KONG"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "686f7f1f-b2ce-4ecc-94d5-e42677022538",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Dataset with Countries of Interest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b0109dc2-fc92-4aff-bb68-aa87458d617e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Databricks visualization. Run in Databricks to view."
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1.subcommand+json": {
+       "baseErrorDetails": null,
+       "bindings": {},
+       "collapsed": false,
+       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"R0RFTFRfRVZFTlRTX1RQUiA9IChHREVMVF9FVkVOVFNfREFURQouZmlsdGVyKGNvbCgiQWN0aW9uR2VvX0NvdW50cnlDb2RlIikuaXNpbigiVVMiLCJDQSIsIlZNIiwiQ0giLCJKQSIsIkhLIiwiS1MiKSkKKQoKZGlzcGxheShHREVMVF9FVkVOVFNfVFBSLmdyb3VwQnkoIkFjdGlvbkdlb19Db3VudHJ5Q29kZSIpLmNvdW50KCkp\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksViewec925f6\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksViewec925f6\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksViewec925f6\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksViewec925f6) SELECT `ActionGeo_CountryCode`,SUM(`count`) `column_b6e7c3587` FROM q GROUP BY `ActionGeo_CountryCode`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksViewec925f6\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
+       "commandTitle": "Visualization 1",
+       "commandType": "auto",
+       "commandVersion": 0,
+       "commentThread": [],
+       "commentsVisible": false,
+       "contentSha256Hex": null,
+       "customPlotOptions": {
+        "redashChart": [
+         {
+          "key": "type",
+          "value": "CHART"
+         },
+         {
+          "key": "options",
+          "value": {
+           "alignYAxesAtZero": true,
+           "coefficient": 1,
+           "columnConfigurationMap": {
+            "x": {
+             "column": "ActionGeo_CountryCode",
+             "id": "column_b6e7c3586"
+            },
+            "y": [
+             {
+              "column": "count",
+              "id": "column_b6e7c3587",
+              "transform": "SUM"
+             }
+            ]
+           },
+           "dateTimeFormat": "DD/MM/YYYY HH:mm",
+           "direction": {
+            "type": "counterclockwise"
+           },
+           "error_y": {
+            "type": "data",
+            "visible": true
+           },
+           "globalSeriesType": "column",
+           "legend": {
+            "traceorder": "normal"
+           },
+           "missingValuesAsZero": true,
+           "numberFormat": "0,0.[00000]",
+           "percentFormat": "0[.]00%",
+           "series": {
+            "error_y": {
+             "type": "data",
+             "visible": true
+            },
+            "stacking": null
+           },
+           "seriesOptions": {
+            "column_b6e7c3587": {
+             "name": "count",
+             "yAxis": 0
+            }
+           },
+           "showDataLabels": false,
+           "sizemode": "diameter",
+           "sortX": true,
+           "sortY": true,
+           "swappedAxes": true,
+           "textFormat": "",
+           "useAggregationsUi": true,
+           "valuesOptions": {},
+           "version": 2,
+           "xAxis": {
+            "labels": {
+             "enabled": true
+            },
+            "type": "-"
+           },
+           "yAxis": [
+            {
+             "type": "-"
+            },
+            {
+             "opposite": true,
+             "type": "-"
+            }
+           ]
+          }
+         }
+        ]
+       },
+       "datasetPreviewNameToCmdIdMap": {},
+       "diffDeletes": [],
+       "diffInserts": [],
+       "displayType": "redashChart",
+       "error": null,
+       "errorDetails": null,
+       "errorSummary": null,
+       "errorTraceType": null,
+       "finishTime": 0,
+       "globalVars": {},
+       "guid": "",
+       "height": "auto",
+       "hideCommandCode": false,
+       "hideCommandResult": false,
+       "iPythonMetadata": null,
+       "inputWidgets": {},
+       "isLockedInExamMode": false,
+       "latestUser": "a user",
+       "latestUserId": null,
+       "listResultMetadata": null,
+       "metadata": {},
+       "nuid": "6926ced3-a7ed-44ee-bd32-0ae6922d7787",
+       "origId": 0,
+       "parentHierarchy": [],
+       "pivotAggregation": null,
+       "pivotColumns": null,
+       "position": 2.88525390625,
+       "resultDbfsErrorMessage": null,
+       "resultDbfsStatus": "INLINED_IN_TREE",
+       "results": null,
+       "showCommandTitle": false,
+       "startTime": 0,
+       "state": "input",
+       "streamStates": {},
+       "subcommandOptions": {
+        "queryPlan": {
+         "groups": [
+          {
+           "column": "ActionGeo_CountryCode",
+           "type": "column"
+          }
+         ],
+         "selects": [
+          {
+           "column": "ActionGeo_CountryCode",
+           "type": "column"
+          },
+          {
+           "alias": "column_b6e7c3587",
+           "args": [
+            {
+             "column": "count",
+             "type": "column"
+            }
+           ],
+           "function": "SUM",
+           "type": "function"
+          }
+         ]
+        }
+       },
+       "submitTime": 0,
+       "subtype": "tableResultSubCmd.visualization",
+       "tableResultIndex": 0,
+       "useConsistentColors": false,
+       "version": "CommandV1",
+       "width": "auto",
+       "workflows": null,
+       "xColumns": null,
+       "yColumns": null
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "GDELT_EVENTS_TPR = (GDELT_EVENTS_DATE\n",
+    ".filter(col(\"ActionGeo_CountryCode\").isin(\"US\",\"CA\",\"VM\",\"CH\",\"JA\",\"HK\",\"KS\"))\n",
+    ")\n",
+    "\n",
+    "display(GDELT_EVENTS_TPR.groupBy(\"ActionGeo_CountryCode\").count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "de60ab29-6e05-42b2-9d19-43230d4bfedb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "# Analsysis of GoldensteinScale depending type of event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a6f9a17d-e50e-49af-a919-82ad9bc3a8eb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(GDELT_EVENTS_TPR.groupBy(col(\"EventRootCode\")).agg(avg(col(\"GoldsteinScale\"))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d7746a42-1514-4f35-ad73-05c05af1357d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "### Data Agrupation By dates, Daily, Weekly, Monthly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "96b0ff8e-7ded-4fd0-a85f-4325288cfab6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(GDELT_EVENTS_TPR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "db1bcfea-306a-4628-b965-1ab4d40d59fa",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(\n",
+    "GDELT_EVENTS_TPR\n",
+    ".withColumn(\"GoldsteinScaleLabel\", when(col(\"GoldsteinScale\") ))\n",
+    "#.groupby(\"Date\",\"ActionGeo_CountryCode\").agg(avg(\"GoldsteinScale\").alias(\"GoldsteinScale\"))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e97b431e-2cb7-4bdb-84f5-58505dd0b793",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f0f8d34e-aac9-4e7a-a93a-fe3587b69b7b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "315ee75f-c40d-40c8-b30d-26bdf180d2e7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "73483bdb-d2c1-4304-a180-443fe290e568",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -234,6 +634,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c2711108-9632-4df2-b70f-b8611e23cbbd",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(PORT_LOCATIONS_DIM_CLEANED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dc95f0c6-0538-4915-8889-3238abd1ba44",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "GDELT_EVENTS_INTEREST = (\n",
+    "GDELT_EVENTS_DATE\n",
+    ".filter(\"ActionGeo_Lat is not null\")\n",
+    ".filter(\"ActionGeo_Long is not null\")\n",
+    ".select(\"ActionGeo_Fullname\",\"ActionGeo_CountryCode\",\"ActionGeo_Lat\",\"ActionGeo_Long\",\"SOURCEURL\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70ecdb67-8817-4564-b583-cb0acb778a84",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(GDELT_EVENTS_INTEREST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "612d03b6-7fdc-4502-8355-bef158eb1131",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "GDELT_CROSS_PORT = (GDELT_EVENTS_INTEREST.filter(\"ActionGeo_CountryCode == 'CH'\")\n",
+    ".crossJoin(PORT_LOCATIONS_DIM_CLEANED.filter(\"COUNTRY == 'CHINA'\"))\n",
+    ")\n",
+    "\n",
+    "GDELT_CROSS_PORT_DISTANCE = cal_lat_log_dist(GDELT_CROSS_PORT, 'ActionGeo_Lat', 'ActionGeo_Long', 'LATITUDE_CORRECTED', 'LONGITUDE_CORRECTED')\n",
+    "\n",
+    "display(GDELT_CROSS_PORT_DISTANCE)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -264,9 +755,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "display(GDELT_EVENTS_DATE)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -285,7 +774,7 @@
    },
    "outputs": [],
    "source": [
-    "GDELT_EVENTS_BASE = "
+    "GDELT_EVENTS_BASE ="
    ]
   },
   {
